feat:[CDS-45189]: commands step support for deployment template (#39572)
* feat:[CDS-45189]: comands step support for deployment template

* feat:[CDS-45189]: using constant

* feat:[CDS-45189]: commands step support for DT